--- a/Web/client/src/app/app.component.scss
+++ b/Web/client/src/app/app.component.scss
@@ -1,7 +1,9 @@
 .content {
     margin-left: 100px;
+    margin-right: 10px;
     transition: 0.3s;
     &.sidebarExpanded {
       margin-left: 160px;
+      margin-right: 16px;
     }
   }
