--- a/Web/book-keepe-client/src/app/app.component.html
+++ b/Web/book-keepe-client/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-sidebar [isExpanded]="sidebarExpanded" (toggleSidebar)="sidebarExpanded = !sidebarExpanded"></app-sidebar>
+<div class="profile">
+  <div style="background-color: black; border-radius: 10px; width: 50px; height: 50px;">profile</div>
+</div>
 <div class="content" [ngClass]="{ 'sidebarExpanded': sidebarExpanded }">
-
   <router-outlet></router-outlet>
 </div>
