--- a/Web/book-keepe-client/src/app/app.component.scss
+++ b/Web/book-keepe-client/src/app/app.component.scss
@@ -1,3 +1,13 @@
 .content {
-    margin-left: 100px;
+    margin-left: 100vh;
+    width: 180vh;
+    // margin-top:;
+    transition: 0.3s;
+    &.sidebarExpanded {
+        margin-left: 160px;
     }
+}
+
+.profile {
+    height: 10px;
+}
