--- a/Web/book-keepe-client/src/app/sidebar/sidebar.component.html
+++ b/Web/book-keepe-client/src/app/sidebar/sidebar.component.html
@@ -49,10 +49,10 @@
               </g>
             </svg>
           </div>
-
+          <div class="title">Journal</div>
         </div>
       <div class="link">
-        <div class="content" [routerLink]="['/Gl']" [routerLinkActive]="'active'">
+        <div class="content" [routerLink]="['/ledger']" [routerLinkActive]="'active'">
           <div class="icon">
             <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink">
